adding my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a student at the UT Austin coding bootcamp</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Seoul, Korea</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, gaming, hanging with my two cats Jouni & Akrout :)</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Game developer/designer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Austin, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Combines technology and creativity</p>
     </section>
 
     <footer id="footer">
